<resources>
    <string name="app_name">calculator</string>
    <string name="Num1">1</string>
    <string name="Num2">2</string>
    <string name="Num3">3</string>
    <string name="Num4">4</string>
    <string name="Num5">5</string>
    <string name="Num6">6</string>
    <string name="Num7">7</string>
    <string name="Num8">8</string>
    <string name="Num9">9</string>
    <string name="Num0">0</string>
    <string name="Num10">A</string>
    <string name="Num11">B</string>
    <string name="Num12">C</string>
    <string name="Num13">D</string>
    <string name="Num14">E</string>
    <string name="Num15">F</string>
    <string name="Add">+</string>
    <string name="Sub">-</string>
    <string name="Mul">*</string>
    <string name="Div">/</string>
    <string name="Equal">=</string>
    <string name="Point">.</string>
    <string name="AC">AC</string>
    <string name="Del">Del</string>
    <string name="Dec_2">二进制</string>
    <string name="Dec_8">八进制</string>
    <string name="Dec_10">十进制</string>
    <string name="Dec_16">十六进制</string>
    <string name="P_A">+/-</string>
    <string name="Bra_L">(</string>
    <string name="Bra_R">)</string>
    <string name="Sin">sin</string>
    <string name="Cos">cos</string>
    <string name="Tan">tan</string>

</resources>
